style.css
@font-face {
    font-family: "Big Miller";
    src: url("fonts/BigMiller-Roman.otf");
}

@font-face {
    font-family: "Big Miller Bold";
    src: url("fonts/BigMiller-Black.otf");
}


@font-face {
    font-family: "Big Miller Italic";
    src: url("fonts/BigMiller-Italic.otf");
}

body {
    background-color: rgba(236, 160, 166, 0.08);
    text-align: center;
    font-family: Helvetica, sans-serif;
    font-size: 14px;
    margin: 0;
    padding: 0;
}

p {
    font-size: 12px;
}

h1{
    font-family: "Big Miller Bold";
    font-size: 24px;
}

button:focus {outline:0;}

.tick {
    font-size: 12px;
}

.annotation {
    margin: 20px 0px;
}

.winner {
    font-size: 10px;
}

.winners .stat-highlight {
  color:#e81760;
}

#wrapper {
    max-width: 620px;
    margin: 0 auto;
    overflow: hidden;
}

.label {
    font-size: 100%;
}

.stats {
    display: inline-block;
    padding: 10px;
    background-color: white;
}

.stat-highlight {
    font-size: 14px;
    font-weight: bold;
    color: #eca0a6;
    margin: 10px 10px 10px 0px;
}

.d3-tip {
    line-height: 1.5;
    padding: 10px;
    background: rgba(255, 255, 255, 0.8);
    color: #000;
    border-radius: 2px;
    line-height: 1.1;
}





/* Creates a small triangle extender for the tooltip */


/*.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(255, 255, 255, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
}*/


/* Style northward tooltips differently */


/*
.d3-tip.n:after {
    margin: -1px 0 0 0;
    top: 100%;
    left: 0;
}*/

.tip-name {
    font-family: "Big Miller Bold";
    font-size: 16px;
}

.tip-category {
    font-family: "Big Miller Bold";
}

.tip-movie {
    font-family: "Big Miller Italic";
}

svg {
    font-size: 10px;
    font-family: Helvetica, sans-serif;
}

.btn {
    font-family: sans-serif;
}

.axis path {
    fill: none;
    stroke: none;
    shape-rendering: crispEdges;
}





/*.axis line {
  fill: none;
  stroke: black;
  stroke-dasharray: 2, 2;
}
*/

.y.axis {
    stroke: none;
}

.marker {
    /*stroke: #000;*/
}

.legend li {
    float: left;
    margin-right: 15px;
}

.legend ul {
    clear: both;
    /*font-size: 12px;*/
    list-style: none;
    padding-left: 0px;
    text-align: center;
    width: 450px;
    margin: 20px auto 0px auto;
    display: block;
    height: 30px;
}

.legend-key {
    width: 10px;
    height: 10px;
    display: inline-block;
    background-color: red;
    margin: 0px 3px 0px 7px;
}

.female-nom {
    background-color: #eca0a6;
}

.female-win {
    background-color: #e81760;
    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23eca0a6' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
}

.male {
    background-color: #dcdcdc;
}

.category-selection {
    margin-bottom: 20px;
}

.category-selection button {
    border-radius: 0px;
    padding: 10px;
    margin: 0px;
    width: 19%;
    border: none;
    background-color: white;
    text-transform: uppercase;
    cursor: pointer;
}

.category-selection button.selected,
.category-selection button:hover,
.category-selection button:active,
.category-selection button:focus {
    background-color: #eca0a6;
    color: white;
    font-weight: bold;
}

.category-selection span {
    float: left;
    margin-top: 5px;
    margin-right: 10px;
}

.headline-date {
    font-family: Helvetica, sans-serif;
    font-weight: normal;
    font-size: 16px;
}


@media (max-width: 400px) {
    .annotation,
    .stats {
        font-size: 11px;
    }

    .legend ul {
        font-size: 10px;
    }

    h1 {
      font-size: 20px;
    }

    .headline-date {
      font-size: 12px;
    }


    .tick {
        font-size: 10px;
    }

    .category-selection button {
        border-radius: 0px;
        padding: 10px;
        margin: 0px;
        width: 15%;
        border: none;
        font-size: 9px;
    }

    .category-selection button[value="best-screenplay"] {
        width: 23%;
    }

    .category-selection button[value="best-director"] {
        width: 19%;
    }
}

